[gd_scene load_steps=4 format=2]

[ext_resource path="res://Intro/WaterBody.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 607.5, 388.25 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 606, 283.5 )

[node name="WaterBody" type="Area2D"]
position = Vector2( 7230, -30 )
script = ExtResource( 1 )

[node name="WaterBodyCol" type="CollisionShape2D" parent="."]
position = Vector2( 385, 0 )
shape = SubResource( 22 )

[node name="WaterBase" type="StaticBody2D" parent="."]

[node name="WaterBaseCol" type="CollisionShape2D" parent="WaterBase"]
unique_name_in_owner = true
position = Vector2( 385, 48 )
shape = SubResource( 23 )

[connection signal="body_entered" from="." to="." method="_on_WaterBody_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WaterBody_body_exited"]
